--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
-  text-align: center;
+.line {
+  width: 300px;
+  height: 2px;
+  border: 1px solid #fff;
+  margin-top: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-root {
+  width: 100%;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #626262;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-button {
+  text-decoration: none;
+  width: 24px;
+  height: 65px;
+  color:#ddd;
+  padding: 24px 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-button:focus {
+  border-bottom: 2px solid #ddd;
+}
+
+.main {
+  padding: 32px 16px;
+  max-width: 100%;
+  margin: 0 auto;
+  overflow: auto;
+  flex: 1;
+}
+
+.bio-root, .skills-root {
+  max-width: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  width: 700px;
 }
 
-.App-link {
-  color: #61dafb;
+.bio-name {
+  font-size: 32px;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bio-position {
+  font-size: 24px;
+  font-weight: 500;
+  font-weight: 600;
 }
+
+.bio-history {
+  font-size: 16px;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+p, h2 {
+  color: #ddd;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.bio-img {
+  max-width: 450px;
+  width: 450px;
+  margin-bottom: 20px;
+}
+
+.bio-img-logo {
+  width: 100%;
+  border-radius: 50%;
+}
+
+
+.bio-social-link {
+  text-decoration: none;
+  color: #ddd;
+  border: 1px solid #626262;
+  border-radius: 8px;
+  padding: 16px 32px;
+  max-width: 100%;
+  margin-right: 16px;
+  margin-top: 20px;
+}
+
+.bio-social-link:hover {
+ background: #383737;
+ border: 1px solid #383737;
+}
+
+/* Skills */
+
+.skills-root>ul {
+  list-style: none;
+  color: #ddd;
+}
+
+.skill-elem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.skill-svg {
+  width: 30px;
+  margin-right: 10px;
+  filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg) brightness(119%) contrast(119%);
+}
+
