--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  height: 100vh;
+  margin: 0;
+}
+
+#root{
+  margin: 0;
+  padding: 0;
+  background-color: #000000de;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
